# cAlgorithms

./: CMakeLists.txt  README.md
plotScripts/: arrayListAppend.sh  enqueueDequeue.sh  hashTableDistri.sh  hashTablePerf.sh
plotScripts/adm/chapter4/: compareSortAlgos.sh  heapsort.sh
plotScripts/adm/chapter5/: bfsProf.sh  bfs_dfs_comparison.sh  dfsProf.sh
plotScripts/chapter1/: hashTablePerf.sh  stackPushPop.sh
plotScripts/chapter4/: successor.sh
scripts/: binTreeInsert.sh
src/adm/chapter4/: CMakeLists.txt  admHeap.c  admHeap.h  admMergesort.c  admMergesort.h  admQuicksort.c  admQuicksort.h
src/adm/chapter5/: CMakeLists.txt  admSimpleGraph.c  admSimpleGraph.h
src/adm/chapter8/: CMakeLists.txt  minEditDists.c  minEditDists.h  minEditDistsNaive.c  minEditDistsNaive.h
src/adm/utilities/: CMakeLists.txt  admReadline.c  admReadline.h  admToStr.c  admToStr.h
src/cci/: CMakeLists.txt  cciArrayList.c  cciArrayList.h  cciBinaryTree.c  cciBinaryTree.h  cciBitArray.c  cciBitArray.h  cciHashTable.c  cciHashTable.h  cciList.c  cciList.h  cciQueue.c  cciQueue.h  cciStack.c  cciStack.h  cciValue.c  cciValue.h
src/chapter1/: CMakeLists.txt  cciArrayList.c  cciArrayList.h  cciBinaryTree.c  cciBinaryTree.h  cciBitArray.c  cciBitArray.h  cciHashTable.c  cciHashTable.h  cciList.c  cciList.h  cciQueue.c  cciQueue.h  cciStack.c  cciStack.h  cciStrings.c  cciStrings.h  cciValue.c  cciValue.h
src/demo/: main.c  tinyCUnit.h
tests/adm/chapter3/: CMakeLists.txt  brokenParenteses.txt  hashString.c  linkedListLoopDetection.txt  overheadFraction.txt  reverseSingleList.txt  shrinkArray.txt
tests/adm/chapter4/: 4.1.imbalanceGame.txt  4.10.txt  4.11.py  4.11.txt  4.12.txt  4.13.txt  4.14.txt  4.15.txt  4.17.txt  4.18.txt  4.2.minMaxDifferences.txt  4.20.txt  4.21.txt  4.22.txt  4.23.txt  4.24.txt  4.25.txt  4.26.txt  4.3.partitionNPairs.txt  4.30.txt  4.31.txt  4.32.txt  4.34.txt  4.35.txt  4.36.txt  4.4.sortByColor.txt  4.5.mostFrequenctNum.txt  4.6.addUpToX.txt  4.7.txt  4.8.txt  4.9.txt  CMakeLists.txt  compare_sort_algo.c  nutsAndBolts.txt  test_heap.c  test_heap_prof.c  test_mergesort.c  test_quicksort.c
tests/adm/chapter5/: CMakeLists.txt  test_bfs.c  test_bfs_prof.c  test_dfs.c  test_dfs_iterative.c  test_dfs_prof.c  test_dfs_recur.c  test_simpleGraph.c  test_stronglyConnected.c  test_topologicalSorting.c
tests/adm/chapter8/: CMakeLists.txt  test_longestCommSub.c  test_minEditing.c  test_minEditingNaive.c  test_r_linearPartition.c  test_r_longestIncreasingSeq.c  test_r_minEditing.c  test_substringMatching.c
tests/adm/utilities/: CMakeLists.txt  test_readline.c  test_toStr.c
tests/avl/: CMakeLists.txt  test_avlTree.c
tests/avl/others/: CMakeLists.txt  avl_tree.h  test.cpp
tests/cci/: CMakeLists.txt
tests/cci/chapter1/: CMakeLists.txt  test_arrayList.c  test_arrayList_perf.c  test_binaryTree.c  test_binaryTree_perf.c  test_bitArray.c  test_hashTable.c  test_hashTable_metrics.c  test_hashTable_perf.c  test_list.c  test_list_perf.c  test_queue.c  test_queue_perf.c  test_stack.c  test_stack_perf.c  test_strings.c  test_value.c
tests/cci/chapter4/: CMakeLists.txt  test_commonAncestor.c  test_findPathsBySum.c  test_isSubtree.c  test_successor.c
tests/cci/chapter8/: CMakeLists.txt  test_81tripleStep.c  test_84powerSet.c
tests/chapter1/: CMakeLists.txt  test_arrayList.c  test_arrayList_perf.c  test_binaryTree.c  test_binaryTree_perf.c  test_bitArray.c  test_hashTable.c  test_hashTable_perf.c  test_list.c  test_list_prof.c  test_queue.c  test_queue_perf.c  test_stack.c  test_stack_perf.c  test_strings.c  test_value.c
tests/chapter4/: CMakeLists.txt  test_commonAncestor.c  test_findPathsBySum.c  test_isSubtree.c  test_successor.c
tests/chapter8/: test_83magicIndex.c  test_87permutationsWoDups.c  test_88permutationsWDups.c
tests/chapterN/: test_buildOrder.c  test_paintFill.c  test_routeBetweenNodes.c
tests/g4g/: CMakeLists.txt
tests/g4g/DP/: longestCommonSubstr.c  longestSubarr.c  minJumpsToReachEnd.c  minSumOfPath.c  palindrome.c  subArrWithMaxSum.c
tests/oneoff/: CMakeLists.txt  a.out  extractLabels.c  readline.c
tests/utils/: tinyCUnit.h
