
add_tinytest_executable(admSimpleGraphTests test_simpleGraph.c)
target_link_libraries(admSimpleGraphTests admChapter5)
add_test(NAME "ADM::Chapter5::SimpleGraphTests" COMMAND admSimpleGraphTests)

add_tinytest_executable(admSimpleGraphBFSTests test_bfs.c)
target_link_libraries(admSimpleGraphBFSTests admChapter5)
add_test(NAME "ADM::Chapter5::SimpleGraphBFSTests" COMMAND admSimpleGraphBFSTests)

add_executable(admSimpleGraphBFSProf test_bfs_prof.c)
target_link_libraries(admSimpleGraphBFSProf admChapter5)

add_tinytest_executable(admSimpleGraphIterativeDFSTests test_dfs_iterative.c)
target_link_libraries(admSimpleGraphIterativeDFSTests admChapter5)
add_test(NAME "ADM::Chapter5::SimpleGraphIterativeDFSTests" COMMAND admSimpleGraphIterativeDFSTests)

add_tinytest_executable(admSimpleGraphRecurDFSTests test_dfs_recur.c)
target_link_libraries(admSimpleGraphRecurDFSTests admChapter5)
add_test(NAME "ADM::Chapter5::SimpleGraphRecurDFSTests" COMMAND admSimpleGraphRecurDFSTests)

add_executable(admSimpleGraphDFSProf test_dfs_prof.c)
target_link_libraries(admSimpleGraphDFSProf admChapter5)

add_tinytest_executable(admTopologicalSortingTest test_topologicalSorting.c)
target_link_libraries(admTopologicalSortingTest admChapter5)
add_test(NAME "ADM::Chapter5::TopologicalSorting" COMMAND admTopologicalSortingTest)

add_tinytest_executable(admStronglyConnectedTests test_stronglyConnected.c)
target_link_libraries(admStronglyConnectedTests admChapter5)
add_test(NAME "ADM::Chapter5::StronglyConnected" COMMAND admStronglyConnectedTests)
