
add_tinytest_executable(chapter81TripleStep test_81tripleStep.c)
target_link_libraries(chapter81TripleStep cciChapter1 m)

add_tinytest_executable(chapter83MagicIndex test_83magicIndex.c)
target_link_libraries(chapter83MagicIndex admChapter4)

add_tinytest_executable(chapter84PowerSet test_84powerSet.c)
target_link_libraries(chapter84PowerSet admChapter4)

add_tinytest_executable(chapter87PermutationsWODUps test_87permutationsWoDups.c)
target_link_libraries(chapter87PermutationsWODUps admChapter4)

add_tinytest_executable(chapter88PermutationsWDups test_88permutationsWDups.c)
